No tengo ni puta idea de usar los assemblers asique sudo y lo hago todo de forma basica para la entrega de antes de vacas. Os kiero xiks

--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -216,6 +216,7 @@
     <Content Include="Views\Usuario\Edit.cshtml" />
     <Content Include="Views\Usuario\ChangeRol.cshtml" />
     <Content Include="Views\Usuario\ForNick.cshtml" />
+    <Content Include="Views\Proyecto\Create.cshtml" />
     <Content Include="Views\Proyecto\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
