No se ni lo que he tocao tio

--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -154,6 +154,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Assembler\AssemblerRecuerdo.cs" />
+    <Compile Include="Assembler\AssemblerServicio.cs" />
     <Compile Include="Controllers\BasicController.cs" />
     <Compile Include="Controllers\CategoriaProyectoController.cs" />
     <Compile Include="Controllers\CategoriaUsuarioController.cs" />
@@ -169,6 +171,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Recuerdo.cs" />
+    <Compile Include="Models\Servicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -245,11 +249,6 @@
     <Content Include="Views\Solicitud\Delete.cshtml" />
     <Content Include="Views\Solicitud\Details.cshtml" />
     <Content Include="Views\Solicitud\Index.cshtml" />
-    <Content Include="Views\Evento\Index.cshtml" />
-    <Content Include="Views\Evento\Details.cshtml" />
-    <Content Include="Views\Evento\Create.cshtml" />
-    <Content Include="Views\Evento\Edit.cshtml" />
-    <Content Include="Views\Evento\Delete.cshtml" />
     <Content Include="Views\CategoriaUsuario\Index.cshtml" />
     <Content Include="Views\CategoriaUsuario\Details.cshtml" />
     <Content Include="Views\CategoriaUsuario\Create.cshtml" />
@@ -260,26 +259,32 @@
     <Content Include="Views\CategoriaProyecto\Create.cshtml" />
     <Content Include="Views\CategoriaProyecto\Edit.cshtml" />
     <Content Include="Views\CategoriaProyecto\Delete.cshtml" />
-    <Content Include="Views\Servicio\Index.cshtml" />
-    <Content Include="Views\Servicio\Details.cshtml" />
-    <Content Include="Views\Servicio\Create.cshtml" />
-    <Content Include="Views\Servicio\Edit.cshtml" />
-    <Content Include="Views\Servicio\Delete.cshtml" />
-    <Content Include="Views\Recuerdo\Index.cshtml" />
-    <Content Include="Views\Recuerdo\Details.cshtml" />
-    <Content Include="Views\Recuerdo\Create.cshtml" />
-    <Content Include="Views\Recuerdo\Edit.cshtml" />
-    <Content Include="Views\Recuerdo\Delete.cshtml" />
     <Content Include="Views\Mensaje\Index.cshtml" />
     <Content Include="Views\Mensaje\Details.cshtml" />
     <Content Include="Views\Mensaje\Create.cshtml" />
     <Content Include="Views\Mensaje\Delete.cshtml" />
     <Content Include="Views\Usuario\ForNick.cshtml" />
+    <Content Include="Views\Evento\Create.cshtml" />
+    <Content Include="Views\Evento\Delete.cshtml" />
+    <Content Include="Views\Evento\Details.cshtml" />
+    <Content Include="Views\Evento\Edit.cshtml" />
+    <Content Include="Views\Evento\Filtrar.cshtml" />
+    <Content Include="Views\Evento\Index.cshtml" />
+    <Content Include="Views\Evento\PorFiltro.cshtml" />
+    <Content Include="Views\Recuerdo\Create.cshtml" />
+    <Content Include="Views\Recuerdo\Delete.cshtml" />
+    <Content Include="Views\Recuerdo\Details.cshtml" />
+    <Content Include="Views\Recuerdo\Edit.cshtml" />
+    <Content Include="Views\Recuerdo\Index.cshtml" />
+    <Content Include="Views\Servicio\Create.cshtml" />
+    <Content Include="Views\Servicio\Delete.cshtml" />
+    <Content Include="Views\Servicio\Details.cshtml" />
+    <Content Include="Views\Servicio\Edit.cshtml" />
+    <Content Include="Views\Servicio\Index.cshtml" />
+    <Content Include="Views\Servicio\PorEstado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Assembler\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Basic\" />
   </ItemGroup>
   <ItemGroup>
