--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -290,6 +290,10 @@
     <Content Include="Views\Evento\eliminarProyectosAsociados.cshtml" />
     <Content Include="Views\Evento\ForNombre.cshtml" />
     <Content Include="Views\Evento\porProyecto.cshtml" />
+    <Content Include="Views\Proyecto\ForNombre.cshtml" />
+    <Content Include="Views\Proyecto\ForCategoriaUsuario.cshtml" />
+    <Content Include="Views\Proyecto\ForCategoriaProyecto.cshtml" />
+    <Content Include="Views\Proyecto\ForEstado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
