--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -294,6 +294,7 @@
     <Content Include="Views\Proyecto\ForCategoriaUsuario.cshtml" />
     <Content Include="Views\Proyecto\ForCategoriaProyecto.cshtml" />
     <Content Include="Views\Proyecto\ForEstado.cshtml" />
+    <Content Include="Views\Recuerdo\CreateNoId.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
