--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -316,6 +316,8 @@
     <Content Include="Views\Sesion\Logout.cshtml" />
     <Content Include="Views\Sesion\Adminin.cshtml" />
     <Content Include="Views\Sesion\Adminout.cshtml" />
+    <Content Include="Views\Evento\NoAdministrador.cshtml" />
+    <Content Include="Views\Home\Index_Administrador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
