--- a/MVC_MultitecUA/MVC_MultitecUA.csproj
+++ b/MVC_MultitecUA/MVC_MultitecUA.csproj
@@ -318,13 +318,13 @@
     <Content Include="Views\Home\Index_Administrador.cshtml" />
     <Content Include="Views\Noticia\VistaUsuario\Noticia.cshtml" />
     <Content Include="Views\Solicitud\FiltroUsuarioProyectoEstado.cshtml" />
+    <Content Include="Views\Proyecto\VistaUsuario\MisProyectos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Basic\" />
     <Folder Include="Views\Evento\VistaUsuario\" />
     <Folder Include="Views\Mensaje\VistaUsuario\" />
-    <Folder Include="Views\Proyecto\VistaUsuario\" />
     <Folder Include="Views\Recuerdo\VistaUsuario\" />
     <Folder Include="Views\Servicio\VistaUsuario\" />
     <Folder Include="Views\Solicitud\VistaUsuario\" />
